# vulkan_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  blend_attribute_codec.h  blend_attribute_compression.c  blend_attribute_compression.h  blend_attribute_compression_related_work.h  camera.c  camera.h  experiment_list.c  frame_timer.c  frame_timer.h  imgui_vulkan.cpp  imgui_vulkan.h  linear_light.c  linear_light.h  ltc_table.c  ltc_table.h  main.c  main.h  math_utilities.h  noise_table.c  noise_table.h  optimal_simplex_sampling.c  optimal_simplex_sampling.h  permutation_coding.h  polygonal_light.c  polygonal_light.h  scene.c  scene.h  string_utilities.h  textures.c  textures.h  user_interface.cpp  user_interface.h  vbac_compression.c  vulkan_basics.c  vulkan_basics.h
src/shaders/: blend_attribute_codec.glsl  blend_attribute_compression.glsl  brdfs.glsl  cubic_solver.glsl  forward_pass.frag.glsl  forward_pass.vert.glsl  imgui.frag.glsl  imgui.vert.glsl  line_sampling.glsl  line_sampling_related_work.glsl  linear_light_utility.glsl  ltc_utility.glsl  math_constants.glsl  mesh_quantization.glsl  noise_utility.glsl  optimal_simplex_sampling_19.glsl  optimal_simplex_sampling_22.glsl  optimal_simplex_sampling_35.glsl  polygon_sampling_related_work.glsl  polygonal_light_utility.glsl  shading_pass.frag.glsl  shading_pass.vert.glsl  shared_constants.glsl  srgb_utility.glsl  unrolling.glsl  viridis.glsl  visibility_pass.frag.glsl  visibility_pass.vert.glsl
tools/: io_export_vulkan_animated_blender28.py  io_export_vulkan_blender28.py
tools/texture_conversion/: CMakeLists.txt  float_to_half.h  main.c
